--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1 class="text-2xl font-extrabold tracking-tight">🎶 My Live Records</h1>
             <div class="flex space-x-3">
                 <button id="toggleAddForm" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-1 px-3 rounded-lg shadow-md transition-colors text-sm">
-                    ライブを追加
+                    ライブの追加・編集・削除はこちら
                 </button>
                 <button id="toggleFilter" class="p-2 rounded-lg hover:bg-gray-700 transition-colors md:hidden text-sm">
                     絞り込み
@@ -945,3 +945,4 @@
 
 </body>
 </html>
+
