--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ライブ記録（Firebase版）</title>
+    <title>ライブ記録</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         ::-webkit-scrollbar { width: 8px; }
@@ -18,7 +18,7 @@
     <div class="max-w-4xl mx-auto p-4 flex justify-between items-center">
         <h1 class="text-2xl font-extrabold tracking-tight">🎶 My Live Records (Firebase)</h1>
         <div class="flex space-x-3">
-            <button id="toggleAddForm" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-1 px-3 rounded-lg shadow-md transition-colors text-sm">予定の追加・編集・削除はこちら</button>
+            <button id="toggleAddForm" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-1 px-3 rounded-lg shadow-md transition-colors text-sm">予定の追加・編集・削除</button>
             <button id="toggleFilter" class="p-2 rounded-lg hover:bg-gray-700 transition-colors md:hidden text-sm">絞り込み</button>
         </div>
     </div>
@@ -523,3 +523,4 @@ window.onload = async ()=>{
 </script>
 </body>
 </html>
+
