--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header class="bg-gray-800 text-white shadow-lg sticky top-0 z-10">
     <div class="max-w-4xl mx-auto p-4 flex justify-between items-center">
-        <h1 class="text-2xl font-extrabold tracking-tight">🎶 My Live Records</h1>
+        <h1 class="text-2xl font-extrabold tracking-tight">🎶 My Live ReFcords</h1>
         <div class="flex space-x-3">
             <button id="toggleAddForm" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-1 px-3 rounded-lg shadow-md transition-colors text-sm">予定の追加・編集・削除</button>
             <button id="toggleFilter" class="p-2 rounded-lg hover:bg-gray-700 transition-colors md:hidden text-sm">絞り込み</button>
@@ -97,10 +97,10 @@
         </div>
     </div>
 
-    <h2 id="upcomingTitle" class="text-2xl font-bold text-gray-700 mb-4 mt-6 border-b-2 border-blue-500 pb-1">📅 Upcoming Schedule (今後の予定)</h2>
+    <h2 id="upcomingTitle" class="text-2xl font-bold text-gray-700 mb-4 mt-6 border-b-2 border-blue-500 pb-1">📅 Upcoming Schedule</h2>
     <section id="upcomingList" class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3"></section>
 
-    <h2 id="pastTitle" class="text-2xl font-bold text-gray-700 mb-4 mt-10 border-b-2 border-gray-400 pb-1">🎤 Past Schedule (終了済み)</h2>
+    <h2 id="pastTitle" class="text-2xl font-bold text-gray-700 mb-4 mt-10 border-b-2 border-gray-400 pb-1">🎤 Past Schedule</h2>
     <section id="pastList" class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3"></section>
 
     <div id="noResults" class="hidden text-center p-12 bg-white rounded-xl shadow-md mt-6">
@@ -523,5 +523,6 @@ window.onload = async ()=>{
 </script>
 </body>
 </html>
+
 
 
