--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header class="bg-gray-800 text-white shadow-lg sticky top-0 z-10">
     <div class="max-w-4xl mx-auto p-4 flex justify-between items-center">
-        <h1 class="text-2xl font-extrabold tracking-tight">🎶 My Live ReFcords</h1>
+        <h1 class="text-2xl font-extrabold tracking-tight">🎶 My Live Records</h1>
         <div class="flex space-x-3">
             <button id="toggleAddForm" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-1 px-3 rounded-lg shadow-md transition-colors text-sm">予定の追加・編集・削除</button>
             <button id="toggleFilter" class="p-2 rounded-lg hover:bg-gray-700 transition-colors md:hidden text-sm">絞り込み</button>
@@ -529,6 +529,7 @@ window.onload = async ()=>{
 </script>
 </body>
 </html>
+
 
 
 
