--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Expires" content="0" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ライブ記録a</title>
+    <title>ライブ記録</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         ::-webkit-scrollbar { width: 8px; }
@@ -523,10 +523,27 @@ window.onload = async ()=>{
     startRealtimeListener();
     checkLockout();
 };
+<!-- ブラウザキャッシュを強制削除（最も確実） -->
+<script>
+if ('caches' in window) {
+    caches.keys().then(function(names) {
+    for (let name of names) caches.delete(name);
+    });
+}
 
+// service worker が登録されている場合は削除
+if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.getRegistrations().then(function(registrations) {
+    for (let registration of registrations) {
+        registration.unregister();
+    }
+    });
+}
+</script>
 </script>
 </body>
 </html>
+
 
 
 
