--- a/index.html
+++ b/index.html
@@ -479,7 +479,12 @@ const filterRecords = ()=>{
         card.innerHTML = `<div class="p-4"><p class="text-xs text-gray-500">${year}</p><p class="text-2xl font-extrabold text-gray-800 mb-1">${monthDay}</p><h3 class="text-xl font-bold text-gray-900 truncate">${record.liveName}</h3><p class="text-sm text-gray-600 truncate">${record.artist} @ ${record.venue}</p></div>`;
         list.appendChild(card);
     });
-
+    
+    // Past Schedule を逆順（新しい順）に表示
+    const pastListItems = Array.from(pastList.children);
+    pastList.innerHTML = '';
+    pastListItems.reverse().forEach(item => pastList.appendChild(item));
+    
     const hasResults = upcomingCount>0 || pastCount>0;
     const noResultsElem = document.getElementById('noResults'); if(noResultsElem) noResultsElem.classList.toggle('hidden', hasResults);
     upcomingList.classList.toggle('hidden', upcomingCount === 0 && !noResultsElem.classList.contains('hidden'));
@@ -544,6 +549,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
