--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ const filterRecords = ()=>{
         card.onclick = ()=> openModal(record.id);
         const dateParts = record.date.split('-'); const monthDay = `${dateParts[1]}/${dateParts[2]}`; const year = dateParts[0];
         let badge = record.type==='event'? `<span class="bg-orange-100 text-orange-800 text-xs font-bold px-2 py-0.5 rounded border border-orange-200">🎪 EVENT</span>` : record.type==='other'? `<span class="bg-green-100 text-green-800 text-xs font-bold px-2 py-0.5 rounded border border-green-200">🎸 OTHER</span>` : `<span class="bg-blue-100 text-blue-800 text-xs font-bold px-2 py-0.5 rounded border border-blue-200">🎤 LIVE</span>`;
-        card.innerHTML = `<div class="p-4"><p class="text-xs text-gray-500">${year}</p><p class="text-2xl font-extrabold text-gray-800 mb-1">${monthDay}</p><h3 class="text-xl font-bold text-gray-900 truncate">${record.liveName}</h3><p class="text-sm text-gray-600 truncate">${record.artist} @ ${record.venue}</p></div>`;
+        card.innerHTML = `<div class="p-4"><p class="text-base text-gray-500">${year}</p><p class="text-2xl font-extrabold text-gray-800 mb-1">${monthDay}</p><h3 class="text-xl font-bold text-gray-900 truncate">${record.liveName}</h3><p class="text-sm text-gray-600 truncate">${record.artist} @ ${record.venue}</p></div>`;
         list.appendChild(card);
     });
     
