--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     <div>
                         <label class="block text-sm font-bold text-gray-700 mb-1">ライブ種別</label>
                         <select id="newLiveType" class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500 bg-white cursor-pointer">
+                            <option value="LIVE">LIVE</option>
                             <option value="ワンマン">ワンマン</option>
                             <option value="対バン">対バン</option>
                             <option value="フェス">フェス</option>
@@ -210,7 +211,7 @@ let recordToDeleteId = null;
 let isUserLoggedIn = false;
 
 // ライブ種別の選択肢リスト
-const liveTypeOptions = ["ワンマン", "対バン", "フェス", "リリイベ", "特典会", "その他"];
+const liveTypeOptions = ["LIVE", "ワンマン", "対バン", "フェス", "リリイベ", "特典会", "その他"];
 
 const dom = {
     addSection: document.getElementById('addRecordSection'),
@@ -428,11 +429,15 @@ function renderDetailView(record) {
         }).join('')}</ul></div>`;
     }
 
+    // --- 修正箇所: カテゴリと種別の統合表示 ---
+    const badgeHtml = record.type === 'live' 
+        ? `<span class="bg-blue-600 text-white text-xs font-bold px-2 py-1 rounded">${record.liveType || 'LIVE'}</span>` 
+        : `<span class="bg-gray-800 text-white text-xs font-bold px-2 py-1 rounded">${record.type.toUpperCase()}</span>`;
+
     dom.modalContent.innerHTML = `
         <div class="mb-4">
             <div class="flex items-center gap-2 mb-2">
-                <span class="bg-blue-100 text-blue-800 text-xs font-bold px-2 py-1 rounded">${record.type.toUpperCase()}</span>
-                ${record.liveType ? `<span class="bg-gray-100 text-gray-600 text-xs font-bold px-2 py-1 rounded">${record.liveType}</span>` : ''}
+                ${badgeHtml}
                 <span class="text-gray-500 text-sm ml-auto">${record.date}</span>
             </div>
             <h2 class="text-2xl md:text-3xl font-extrabold text-gray-900 leading-tight mt-2">${record.liveName}</h2>
@@ -543,13 +548,18 @@ function filterRecords() {
     filtered.forEach(rec => {
         const isUpcoming = new Date(rec.date) >= now;
         const dateStr = rec.date.split('-');
+        
+        // --- 修正箇所: カード内のカテゴリと種別の統合表示 ---
+        const badgeHtml = rec.type === 'live'
+            ? `<span class="px-2 py-1 rounded bg-blue-600 text-white">${rec.liveType || 'LIVE'}</span>`
+            : `<span class="px-2 py-1 rounded ${rec.type === 'event' ? 'bg-orange-500' : 'bg-green-600'} text-white">${rec.type.toUpperCase()}</span>`;
+
         const el = document.createElement('div');
         el.className = `bg-white rounded-xl shadow p-5 cursor-pointer transform hover:-translate-y-1 transition-all border-t-4 ${isUpcoming?'border-blue-500':'border-gray-400 opacity-90'}`;
         el.onclick = () => openModal(rec.id);
         el.innerHTML = `<div class="flex justify-between text-xs font-bold mb-2">
                 <div class="flex gap-1">
-                    <span class="px-2 py-1 rounded bg-blue-100 text-blue-800">${rec.type.toUpperCase()}</span>
-                    ${rec.liveType ? `<span class="px-2 py-1 rounded bg-gray-100 text-gray-600">${rec.liveType}</span>` : ''}
+                    ${badgeHtml}
                 </div>
                 <span class="text-gray-400 font-mono">${dateStr[0]}</span>
             </div>
